hphp/hack/test/typecheck/tconst/tconst_intersect_tyvar.php.exp
ERROR: File "tconst_intersect_tyvar.php", line 12, characters 26-29:
Type access is only valid for a class, `self`, or `this`. To relate type parameters and type constants, you likely want to use the 'with refinement' feature instead. (Naming[2129])
